@@ -72,7 +72,10 @@ ROOT_KEY=Repository Root:
 SVN_ROOT=`svn info |grep "$(ROOT_KEY)" |sed -e "s/$(ROOT_KEY)\s*//"`
 
 tag-release: distcheck
-	svn cp -m "tag $(PACKAGE) $(VERSION)" $(SVN_PATH)@$(SVN_REV) $(SVN_ROOT)/tags/$(PACKAGE)-$(VERSION)
+	@svn cp -r$(SVN_REV) -m "tag $(PACKAGE) $(VERSION)" $(SVN_PATH) $(SVN_ROOT)/tags/$(PACKAGE)-$(VERSION) \
+		|| (echo "Tagging failed.  Do you have local changes that are not committed?" \
+		&& echo "Try running `svn update`." && false)
+	@echo "Release Tagged."
 
 release: tag-release
 	scp $(DIST_ARCHIVES) master.gnome.org:
