@@ -1,3 +1,8 @@
+2008-03-04  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* Makefile.am: updated the 'release' taget to give a little bit more helpful
+	error messages
+
 2008-02-29  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* Makefile.am: add a 'release' target to the makefile.  This target will do
